--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -478,7 +478,7 @@ body {
 }
 
 #skill {
-    background-image: linear-gradient(#2b7a77ea, #2b7a77e7), url(Image/keyboard-coffee.jpg);
+    background-image: linear-gradient(#2b7a77ea, #2b7a77e7);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
